--- a/pdsc.html
+++ b/pdsc.html
@@ -15,7 +15,7 @@
     <div class="content">
         <div class="menu">
             <div class="logoimage">
-                <img src="logo.png" alt="logo">
+                <a href="#content1"><img src="logo.png" alt="logo"></a>
             </div>
             <div class="menuButtons">
                 <p> <a href="#about-us"> About Us </a></p>
@@ -28,7 +28,7 @@
         </div>
         
         
-        <div class="content1">
+        <div id="content1" class="content1">
             <p id ="plan">Welcome to <br> PDSC</p>
             <p id = "where-we-text">where we <span class="auto-type"></span> </p>
             <!-- <p id = "plan">Plan, Design <br>Solve <span id = "and">&</span> Create  </p> -->
